# translate-dir-lib

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  cache.md  cli.py  main.py  pyproject.toml  reinstall.sh
.github/workflows/: release.yml  tests.yml
docs/: cli.md  main.md  tool-profound-explanation.md  typst_parsing_analysis.md
scripts/: myst_roundtrip.py
src/: cli.py
src/trans_lib/: constants.py  diff.py  doc_corrector.py  doc_translator.py  enums.py  errors.py  helpers.py  project_config_io.py  project_config_models.py  project_manager.py  project_runtime.py  prompts.py  trans_db.py  translator.py  translator_corrector.py  translator_retrieval.py  vocab_list.py
src/trans_lib/doc_translator_mod/: latex_chunker.py  latex_file_translator.py  myst_chunker.py  myst_file_translator.py  notebook_file_translator.py  typst_chunker.py  typst_file_translator.py
src/trans_lib/translation_cache/: cache_backend.py  cache_cleaner.py  cache_rebuilder.py  translation_cache.py
src/trans_lib/translation_store/: trans_db.py  translation_store.py
src/trans_lib/xml_manipulator_mod/: code.py  latex.py  mod.py  myst.py  typst.py  xml.py
tests/: test_cache_clear.py  test_cache_sync.py  test_chunk_translator.py  test_custom_services.py  test_db_rebuild.py  test_needs_review.py  test_needs_review_e2e.py  test_notebook_frontmatter.py  test_project_config_paths.py  test_typst_chunker.py  test_typst_file_translator.py  test_typst_xml_tagging.py  test_use_reasoning_model.py  test_xml_tagging.py
trans_lib/: constants.py  doc_corrector.py  doc_translator.py  enums.py  errors.py  helpers.py  project_config_io.py  project_config_models.py  project_manager.py  trans_db.py  translator.py  translator_corrector.py  translator_retrieval.py  vocab_list.py
trans_lib/doc_translator_mod/: latex_chunker.py  latex_file_translator.py  notebook_file_translator.py
