[project]
name = "translate-dir-lib"
version = "0.1.0"
description = "A library for automated directory translation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.16.1",
    "httpx>=0.28.1",
    "jupytext>=1.17.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.5",
    "pylatexenc>=2.10",
    "tree-sitter-language-pack>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools] 
py-modules = ["trans_lib"]


