[project]
name = "translate-dir-lib"
version = "0.1.2"
description = "A library for automated directory translation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.16.1",
    "httpx>=0.28.1",
    "jupytext>=1.17.1",
    "linkify-it-py>=2.0.3",
    "loguru>=0.7.3",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "myst-parser>=4.0.1",
    "pydantic>=2.11.5",
    "pylatexenc>=2.10",
    "tree-sitter-language-pack>=0.9.0",
    "typer>=0.20.0",
    "unified-model-caller>=0.1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
unified-model-caller = { git = "https://github.com/DobbiKov/unified-model-caller.git" }

[project.scripts]
translate-dir = "cli:app"

[tool.setuptools] 
py-modules = ["trans_lib", "cli"]


[tool.pytest.ini_options]
pythonpath = ["src"]

